# carcass_telebot

./: README.md  pyproject.toml
bot_carcass/: __init__.py  bot.py  bot_methods.py  checks.py  commands.py  parsing.py  urls.py
tests/: .env1  .env2  __init__.py  test_bot_methods.py  test_checks.py  test_get_token.py  test_parsing.py  test_urls.py
