[tool.poetry]
name = "carcass_telebot"
version = "0.0.1"
description = "The package contains a skeleton of a simple chatbot for telegrams"
authors = ["BuGalter <wardoc78@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
