[tool.poetry]
name = "bot_carcass"
version = "1.0.0"
description = "The package contains a skeleton of a simple chatbot for telegrams"
authors = ["BuGalter <wardoc78@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pytest = "^6.2.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.2"
mypy = "^0.800"
flake8 = "^3.8.4"
pydocstyle = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
